POM: Keep the Sonatype staging repo in all cases; Docs: Update RELEASING.md

--- a/pom.xml
+++ b/pom.xml
@@ -350,6 +350,9 @@
                             <serverId>ossrh</serverId>
                             <nexusUrl>https://${ossrh.host}/</nexusUrl>
                             <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                            <keepStagingRepositoryOnFailure>true</keepStagingRepositoryOnFailure>
+                            <keepStagingRepositoryOnCloseRuleFailure>true</keepStagingRepositoryOnCloseRuleFailure>
+                            <skipStagingRepositoryClose>true</skipStagingRepositoryClose>
                         </configuration>
                     </plugin>
 
