--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <version.kotlin-dokka>1.8.20</version.kotlin-dokka>
         <version.jdk>11</version.jdk>
         <version.jackson>2.14.1</version.jackson>
-        <version.surefire>3.0.0-M8</version.surefire>
+        <version.surefire>3.1.2</version.surefire>
 
         <jvm.args.debug /> <!-- Used by the -Pdebug profile. -->
         <mainClass>Crunch</mainClass>
@@ -31,6 +31,7 @@
         <skipE2E>false</skipE2E>
         <ossrh.host>oss.sonatype.org</ossrh.host>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
+        <surefire.printSummary>false</surefire.printSummary><!-- Suppress the WARNING about skipped tests (except the final one). -->
     </properties>
 
     <build>
@@ -70,6 +71,7 @@
                 <groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId><version>${version.surefire}</version>
                 <configuration>
                     <trimStackTrace>false</trimStackTrace>
+
                     <systemPropertyVariables>
                         <test.data.dir>${project.build.testSourceDirectory}/../data</test.data.dir>
                         <target.dir>${project.build.directory}</target.dir>
