--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.kotlin>1.9.22</version.kotlin>
-        <version.kotlin-dokka>1.9.22</version.kotlin-dokka>
+        <version.kotlin-dokka>1.9.10</version.kotlin-dokka>
         <version.jdk>11</version.jdk>
         <version.jackson>2.16.1</version.jackson>
         <version.surefire>3.1.2</version.surefire>
@@ -108,6 +108,7 @@
                         <goals><goal>single</goal></goals>
                         <phase>package</phase>
                         <configuration>
+                            <!-- Maven says this is read only. -->
                             <finalName>${project.artifactId}-${project.version}-single</finalName>
                             <archive>
                                 <manifest>
@@ -182,7 +183,9 @@
                 <!-- Delete the pre-existing DB -->
                 <executions>
                     <execution><id>clean-hsqldb-data</id><phase>pre-integration-test</phase><goals><goal>clean</goal></goals>
-                        <configuration><directory>hsqldb/</directory></configuration>
+                        <configuration>
+                            <filesets> <fileset> <directory>hsqldb/</directory> <useDefaultExcludes>false</useDefaultExcludes> </fileset> </filesets>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
