POM: Fix build cleanup

--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <appendAssemblyId>false</appendAssemblyId>
+                    <appendAssemblyId>true</appendAssemblyId>
                 </configuration>
             </plugin>
 
@@ -187,6 +187,7 @@
                 <executions>
                     <execution><id>clean-hsqldb-data</id><phase>pre-integration-test</phase><goals><goal>clean</goal></goals>
                         <configuration>
+                            <excludeDefaultDirectories>true</excludeDefaultDirectories>
                             <filesets> <fileset> <directory>hsqldb/</directory> <useDefaultExcludes>false</useDefaultExcludes> </fileset> </filesets>
                         </configuration>
                     </execution>
