--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ch.zizka.csvcruncher</groupId>
     <artifactId>csv-cruncher</artifactId>
-    <version>2.7.2-SNAPSHOT</version>
+    <version>2.7.1-SNAPSHOT</version>
 
     <name>CsvCruncher</name>
     <description>Treats CSV or JSON files as SQL tables, and exports SQL SELECTs back to CSV or JSON.</description>
@@ -27,7 +27,7 @@
 
         <jvm.args.debug /> <!-- Used by the -Pdebug profile. -->
         <mainClass>Crunch</mainClass>
-        <testRunCmd>${jvm.args.debug} -jar ${project.build.directory}/${project.build.finalName}-jar-with-dependencies.jar</testRunCmd>
+        <testRunCmd>${jvm.args.debug} -jar ${project.build.directory}/${project.build.finalName}-single.jar</testRunCmd>
         <skipE2E>false</skipE2E>
         <ossrh.host>oss.sonatype.org</ossrh.host>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
@@ -101,7 +101,7 @@
                    mvn install assembly:assembly
             -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId><artifactId>maven-assembly-plugin</artifactId><version>3.6.0</version>
+                <groupId>org.apache.maven.plugins</groupId><artifactId>maven-assembly-plugin</artifactId><version>3.4.2</version>
                 <executions>
                     <execution>
                         <id>single</id> <!-- Was before MJAR-233: assembleDistJar -->
@@ -150,7 +150,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <appendAssemblyId>true</appendAssemblyId>
+                    <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
             </plugin>
 
@@ -187,7 +187,6 @@
                 <executions>
                     <execution><id>clean-hsqldb-data</id><phase>pre-integration-test</phase><goals><goal>clean</goal></goals>
                         <configuration>
-                            <excludeDefaultDirectories>true</excludeDefaultDirectories>
                             <filesets> <fileset> <directory>hsqldb/</directory> <useDefaultExcludes>false</useDefaultExcludes> </fileset> </filesets>
                         </configuration>
                     </execution>
